try iphone notch

--- a/app/assets/stylesheets/page_layout.css
+++ b/app/assets/stylesheets/page_layout.css
@@ -24,3 +24,8 @@
 
   /* background:#6cf; */
 }
+
+.app-container {
+  padding-left: constant(safe-area-inset-left);
+  padding-right: constant(safe-area-inset-right);
+}
