--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
     </link>
   </head>
  
-  <%#  <meta name="viewport" content="width=device-width, initial-scale=1"> %>
+  <%#  <meta name="viewport" content="width=device-width, initial-scale=1,viewport-fit=cover""> %>
   <body>
     <%= yield %>
   </body>
