rearrange listing show

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -334,9 +334,16 @@ li {
 .fa-question-circle.fa-question-circle-mobile,
 .fa-shopping-cart.fa-shopping-cart-mobile,
 .fa-solid.fa-user.fa-user-mobile,
+.fas.fa-user-plus,
+.fas.fa-sign-in-alt,
 .fas.fa-search-mobile {
   font-size: 50px;
   padding-bottom: 10px;
+  min-width: 50px;
+}
+
+.sign-in-link-mobile {
+  align-self: center;
 }
 
 .search-button-mobile {
