--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -223,6 +223,7 @@ MOBILE VIEW
 
 .below-image-gallery-mobile {
   padding: 0 20px 0 20px;
+  font-size: 35px;
 }
 
 .title-price-container-mobile {
