--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -505,3 +505,8 @@ li {
 // .icon-sell-etsy {
 //   background-position: 0 0;
 // }
+
+// .image-gallery-thumbnail-inner {
+//   width: 200px;
+//   height: 170px;
+// }
