add to cart mobile css

--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -42,9 +42,11 @@
   font-size: 14px;
 }
 
-.listing-seller-phone-number > a {
+.listing-seller-phone-number > a,
+.listing-seller-phone-number > div > a {
   color: black;
   font-size: 14px;
+  text-decoration: none;
 }
 
 .listing-header-seller-name a:hover {
@@ -267,6 +269,7 @@ MOBILE VIEW
   font-size: 35px;
   height: 80px;
   margin-top: 35px;
+  border-radius: 15px;
 }
 
 .phone-number-mobile {
@@ -313,4 +316,20 @@ MOBILE VIEW
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.btn-secondary {
+  background-color: #f8f8f8;
+  height: 92px;
+  border: 1px solid gray;
+}
+
+.quantity-button-left-mobile {
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+
+.quantity-button-right-mobile {
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
