--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -12,18 +12,17 @@
   /* height: auto; */
   overflow-x: auto;
   justify-content: space-between;
-  background-color: #f8f8f8;
   overflow-y: hidden;
+  border-bottom: none;
 }
 
 .categories-item-mobile {
-  display: inline-block;
   padding-left: 20px;
   padding-right: 20px;
-  width: 100%;
-  min-width: 160px;
   font-size: 30px;
-  text-align: center;
+  border: 1px solid gray;
+  min-width: fit-content;
+  max-width: fit-content;
 }
 
 .categories-wrapper > li {
