--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -17,12 +17,12 @@
 }
 
 .categories-item-mobile {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 10px 30px 10px 30px;
   font-size: 30px;
   border: 1px solid gray;
   min-width: fit-content;
   max-width: fit-content;
+  height: 50px;
 }
 
 .categories-wrapper > li {
@@ -47,8 +47,9 @@
 }
 
 .categories-wrapper-mobile > li > a {
-  font-size: 25px;
+  font-size: 30px;
   width: 100%;
+  font-weight: 500;
 }
 
 .categories-wrapper > li > a:visited {
