quantity mobile height

--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -308,7 +308,7 @@ MOBILE VIEW
 .quantity-buttons-container-mobile {
   display: flex;
   /* justify-content: flex-start; */
-  height: 100%;
+  height: 100% !important;
   align-items: center;
   text-align: center;
 }
