share button css

--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -375,5 +375,8 @@ MOBILE VIEW
   /* border: 2px solid gray; */
   /* border-radius: 50px; */
   padding: 10px;
-  color: black;
+  color: #fff;
+  filter: drop-shadow(0 2px 2px #1a1a1a);
+  cursor: pointer;
+  transition: all 0.3s ease-out;
 }
