--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -371,7 +371,7 @@ MOBILE VIEW
 }
 
 .fas.fa-share {
-  font-size: 70px;
+  font-size: 50px;
   /* border: 2px solid gray; */
   /* border-radius: 50px; */
   padding: 10px;
@@ -379,4 +379,18 @@ MOBILE VIEW
   filter: drop-shadow(0 2px 2px #1a1a1a);
   cursor: pointer;
   transition: all 0.3s ease-out;
+}
+
+.fas.fa-share-mobile {
+  font-size: 70px;
+}
+
+.image-gallery-slide-wrapper .image-gallery-index {
+  top: auto;
+  left: 0;
+  bottom: 0;
+  font-size: 25px;
+  background: none;
+  margin-bottom: 20px;
+  margin-left: 20px;
 }
