--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
   <%= favicon_link_tag %>
     <title>Castle & Chair</title>
+    <script> window.prerenderReady = false; </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129173672-2"></script>
     <script>
