Update default html of React is not working.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,5 +8,6 @@
 <% end %>
 
 <main id="root">
-  <h1>React is not working</h1>
+  <h1>Welcome to Castle and Chair. We are open by appointment. </h1>
+  <div>Visit <a href='https://www.castleandchair.com/#/visit'>https://www.castleandchair.com/#/visit</a> to book now.</div>
 </main>
