--- a/app/assets/stylesheets/collapsible.css
+++ b/app/assets/stylesheets/collapsible.css
@@ -3,6 +3,7 @@
   border-bottom: #e1e3df 1px solid;
   border-bottom-color: rgb(225, 227, 223);
   padding: 20px 0px 20px 0px;
+  color: black;
 }
 .expandable-button {
   display: flex;
@@ -13,6 +14,7 @@
   height: 75px;
   font-size: 35px;
   align-items: center;
+  color: black;
 }
 
 .collapsible-title {
@@ -50,7 +52,7 @@
   display: inline-block;
   height: 60px;
   width: 10px;
-  background-color: black;
+  background-color: lightgray;
   border-radius: 10px;
   position: relative;
   transition: 300ms ease-in-out transform;
