--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -61,13 +61,13 @@
   display: flex;
   justify-content: space-evenly;
   grid-column-gap: 35px;
+  font-weight: bold;
 }
 
 .listing-seller-phone-number.listing-seller-phone-number-mobile > a {
   font-size: 35px;
   height: 90px;
   width: 100%;
-  border-radius: 25px;
   border: 1px solid gray;
   text-decoration: none;
   color: black;
@@ -75,6 +75,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.listing-seller-phone-number.listing-seller-phone-number-mobile > a:hover {
+  background-color: #3c3c3c;
+  border-color: rgba(0, 0, 0, 0.2);
+  color: white;
 }
 
 .listing-header-seller-name a:hover {
@@ -301,7 +307,7 @@ MOBILE VIEW
   font-size: 35px;
   height: 90px;
   margin-top: 35px;
-  border-radius: 15px;
+  /* border-radius: 15px; */
 }
 
 .phone-number-mobile {
@@ -365,14 +371,14 @@ MOBILE VIEW
 }
 
 .quantity-button-left-mobile {
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
+  /* border-top-left-radius: 15px; */
+  /* border-bottom-left-radius: 15px; */
   touch-action: manipulation;
 }
 
 .quantity-button-right-mobile {
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  /* border-top-right-radius: 15px; */
+  /* border-bottom-right-radius: 15px; */
   touch-action: manipulation;
 }
 
