--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -75,6 +75,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 35px;
 }
 
 .listing-seller-phone-number.listing-seller-phone-number-mobile > a:hover {
@@ -312,7 +313,6 @@ MOBILE VIEW
 
 .phone-number-mobile {
   text-align: center;
-  padding: 0px 0 20px 0;
   text-decoration: none;
   font-size: 30px;
 }
@@ -360,6 +360,11 @@ MOBILE VIEW
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.quantity-button-mobile:hover {
+  color: white;
+  background-color: black;
 }
 
 .btn-secondary {
