--- a/app/assets/stylesheets/condition_detail_modal.css
+++ b/app/assets/stylesheets/condition_detail_modal.css
@@ -14,6 +14,7 @@
   justify-content: center;
   margin-left: 0;
   margin-top: 0;
+  max-width: 800px;
 }
 
 .modal-child.modal-child-condition-detail-mobile {
