make condition slider entire button

--- a/app/assets/stylesheets/condition_slider.css
+++ b/app/assets/stylesheets/condition_slider.css
@@ -10,6 +10,13 @@
   font-size: 15px;
 }
 
+.condition-slider-entire-button {
+  width: 100%;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+}
+
 .condition-slider-container-mobile {
   font-size: 30px;
 }
