--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .modal-child {
@@ -29,6 +30,7 @@
   z-index: 3;
   border-radius: 5px;
   /* border: 1px solid #000; */
+  cursor: auto;
 }
 
 .modal-child-mobile,
