--- a/app/assets/stylesheets/listing_index.css
+++ b/app/assets/stylesheets/listing_index.css
@@ -158,7 +158,7 @@
   position: fixed;
   bottom: 100px;
   right: 50px;
-  border-radius: 50px;
+  border-radius: 50%;
   opacity: 0;
   background-color: lightgray;
   border: none;
@@ -177,8 +177,8 @@
 
 .scroll-to-top-mobile {
   font-size: 60px;
-  bottom: 200px;
-  transform: translateY(200px);
+  /* bottom: 200px; */
+  /* transform: translateY(200px); */
 }
 
 .showButton {
