--- a/app/assets/stylesheets/listing_index.css
+++ b/app/assets/stylesheets/listing_index.css
@@ -167,6 +167,7 @@
   transform: translateY(100px);
   transition: all 0.5s ease;
   cursor: pointer;
+  -webkit-border-radius: 50%;
 }
 
 .scroll-to-top:active {
