--- a/app/assets/stylesheets/collapsible.css
+++ b/app/assets/stylesheets/collapsible.css
@@ -38,7 +38,7 @@
 }
 
 .expandable-box-container .collapsible-content.open {
-  max-height: 1000px;
+  max-height: 100%;
   white-space: pre-line;
 }
 
