--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <script> window.prerenderReady = false; </script>
   <head>
   <%= favicon_link_tag %>
     <title>Castle & Chair</title>
