--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -71,7 +71,8 @@
   position: fixed;
   top: 200px;
   left: 0px;
-  width: 100vw;
+  /* width: 100vw; */
+  width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 1;
