--- a/app/assets/stylesheets/page_layout.css
+++ b/app/assets/stylesheets/page_layout.css
@@ -28,4 +28,5 @@
 .app-container {
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+  max-width: 100vw;
 }
