--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -71,8 +71,7 @@
   position: fixed;
   top: 200px;
   left: 0px;
-  /* width: 100vw; */
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 1;
