--- a/app/assets/stylesheets/page_layout.css
+++ b/app/assets/stylesheets/page_layout.css
@@ -28,5 +28,6 @@
 .app-container {
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
-  max-width: 100vw;
+  max-width: 100vw !important ;
+  min-width: 100vw !important ;
 }
